--- a/template/index.html
+++ b/template/index.html
@@ -210,7 +210,7 @@
                 <!-- slide 1 start -->
                 <li class="text-center" data-transition="fade" data-slotamount="default" data-masterspeed="default" data-title="Máquinas e Sistemas">
                 <!-- main image -->
-                <img src="images/bg-slider-3.png" alt="slidebg2" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">          
+                <img src="images/bg-slider-1.png" alt="slidebg2" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">          
                 <!-- Transparent Background -->
                 <div class="tp-caption dark-translucent-bg"
                   data-x="center"
@@ -273,7 +273,7 @@
                 <!-- slide 2 start -->
                 <li class="text-center" data-transition="fade" data-slotamount="default" data-masterspeed="default" data-title="Soluções Inteligentes">
                 <!-- main image -->
-                <img src="images/bg-slider-1.png" alt="slidebg2" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">
+                <img src="images/bg-slider-2.png" alt="slidebg2" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">
                 <!-- Transparent Background -->
                 <div class="tp-caption dark-translucent-bg"
                   data-x="center"
@@ -341,7 +341,7 @@
                 <li class="text-center" data-transition="fade" data-slotamount="default" data-masterspeed="default" data-title="Análises em Tempo Real">
 
                 <!-- main image -->
-                <img src="images/bg-slider-4.png" alt="slidebg2" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">
+                <img src="images/bg-slider-3.png" alt="slidebg2" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">
 
                 <!-- Transparent Background -->
                 <div class="tp-caption dark-translucent-bg"
@@ -438,7 +438,7 @@
       <!-- section end -->
 
       <!-- section technology start -->     
-      <section class="dark-translucent-bg tech pv-55 clearfix" style="background-image:url(images/tech-bg-image-4.png)">
+      <section class="dark-translucent-bg tech pv-55 clearfix" style="background-image:url(images/tech-bg-image.png)">
         <div class="container">
           <div class="row row-eq-height">
             <div class="main col-md-12">
@@ -588,7 +588,7 @@
       <!-- section banner call-to-action end -->
 
       <!-- section benefits start -->
-      <section class="dark-translucent-bg pv-30" style="background-image:url(images/benefits-bg-image4.png);">
+      <section class="dark-translucent-bg pv-30" style="background-image:url(images/benefits-bg-image.png);">
         <div class="container">
           <div class="row justify-content-md-center">
             <div class="col-md-8">
@@ -707,7 +707,7 @@
       <!-- section partners end -->
 
       <!-- section media start -->     
-      <div class="section dark-translucent-bg pv-55 clearfix" style="background-image:url(images/tech-bg-image-4.png)">
+      <div class="section dark-translucent-bg pv-55 clearfix" style="background-image:url(images/tech-bg-image.png)">
         <div class="container">
             <div class="main">
               <h2 class="page-title text-white text-center">Na Mídia</h2>
