edit images media 21.03

--- a/template/page-media.html
+++ b/template/page-media.html
@@ -40,10 +40,7 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Font Awesome CSS -->
-    <link href="fonts/font-awesome/css/font-awesome.css" rel="stylesheet">
-
-    <!-- Fontello CSS -->
-    <link href="fonts/fontello/css/fontello.css" rel="stylesheet">
+    <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Plugins -->
     <link href="plugins/rs-plugin-5/css/settings.css" rel="stylesheet">
@@ -51,7 +48,6 @@
     <link href="plugins/rs-plugin-5/css/navigation.css" rel="stylesheet">
     <link href="css/animations.css" rel="stylesheet">
     <link href="plugins/owlcarousel2/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="plugins/owlcarousel2/assets/owl.theme.default.min.css" rel="stylesheet">
     <link href="plugins/hover/hover-min.css" rel="stylesheet">
 
     <link href="css/style.css" rel="stylesheet" >
@@ -311,7 +307,7 @@
                   <a target="_blank" href="http://pesquisaparainovacao.fapesp.br/mvisia_adapta_produto_para_conquistar_diferentes_mercados/49">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-5.png" alt="logo-fapesp">
+                        <img src="images/media-3.png" alt="logo-fapesp">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">MVisia adapta produto para conquistar diferentes mercados</h5>
@@ -470,7 +466,7 @@
                   <a target="_blank" href="https://institutotim.org.br/2016/08/30/awc-participa-do-evento-sp-conecta/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-13.png" alt="logo-instituto-tim">
+                        <img src="images/media-6.png" alt="logo-instituto-tim">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">AWC participa do evento SP Conecta</h5>
@@ -490,7 +486,7 @@
                   <a target="_blank" href="http://cenarioagro.com.br/prototipo-de-seletora-de-mudas-de-cana-e-premiado/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-14.png" alt="logo-cenario-agro">
+                        <img src="images/media-13.png" alt="logo-cenario-agro">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Protótipo de seletora de mudas de cana é premiado</h5>
@@ -509,7 +505,7 @@
                   <a target="_blank" href="http://g1.globo.com/sp/sao-carlos-regiao/jornal-da-eptv-2edicao/videos/t/edicoes/v/embrapa-instrumentacao-desenvolve-maquina-que-tira-sujeira-de-frutas-e-legumes-sem-agua/5794091/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-15.png" alt="logo-g1">
+                        <img src="images/media-14.png" alt="logo-g1">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Embrapa Instrumentação desenvolve máquina que tira sujeira de frutas e legumes...</h5>
@@ -528,7 +524,7 @@
                 <div class="col-md-3 col-sm-12 col-xs-12">
                   <div class="image-box shadow-2 text-center mb-20">
                     <div class="overlay-container">
-                      <img src="images/media-16.png" alt="logo-grupo-cultivar">
+                      <img src="images/media-15.png" alt="logo-grupo-cultivar">
                       <div class="overlay-top">
                         <div class="text">
                           <h5 class="text-white title">Máquina compacta voltada a pequenos produtores limpa tomate sem uso de água</h5>
@@ -547,7 +543,7 @@
                   <a target="_blank" href="http://convergecom.com.br/tiinside/webinside/17/05/2017/empresas-criam-1a-associacao-brasileira-de-inteligencia-artificial/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-17.png" alt="logo-ti-inside">
+                        <img src="images/media-17.svg" alt="logo-ti-inside">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Empresas criam 1ª Associação Brasileira de Inteligência Artificial</h5>
@@ -567,7 +563,7 @@
                   <a target="_blank" href="https://awc.institutotim.org.br/noticias/mvisia-investe-em-novos-mercados-e-novas-aplicacoes/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-19.png" alt="logo-instituto-tim">
+                        <img src="images/media-19.svg" alt="logo-instituto-tim">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">MVisia investe em novos mercados e novas aplicações</h5>
@@ -587,7 +583,7 @@
                   <a target="_blank" href="http://www.poli.usp.br/pt/comunicacao/noticias/2362-politecnicos-criam-ferramenta-que-seleciona-mudas-ideais-de-cana-de-acucar.html?platform=hootsuite">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-20.png" alt="logo-poli-usp">
+                        <img src="images/media-20.svg" alt="logo-poli-usp">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Politécnicos criam ferramenta que seleciona mudas ideais de cana-de-açúcar</h5>
@@ -607,7 +603,7 @@
                   <a target="_blank" href="http://jornal.usp.br/ciencias/ciencias-agrarias/ferramenta-seleciona-mudas-ideais-de-cana-de-acucar/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-21.png" alt="logo-jornal-da-usp">
+                        <img src="images/media-21.svg" alt="logo-jornal-da-usp">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Ferramenta seleciona mudas ideais de cana-de-açúcar</h5>
@@ -627,7 +623,7 @@
                   <a target="_blank" href="https://awc.institutotim.org.br/noticias/nova-solucao-da-mvisia-para-cana-de-acucar-conquista-premios/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-22.png" alt="logo-instituto-tim">
+                        <img src="images/media-22.svg" alt="logo-instituto-tim">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Nova solução da MVisia para cana-de-açúcar conquista prêmios</h5>
@@ -647,7 +643,7 @@
                   <a target="_blank" href="https://www.youtube.com/watch?v=oN6re9K57KQ&list=PL6EFtJLroeE-AHNu3cvhGFU__rTbtfYf3">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-23.png" alt="logo-premio-odebrecht">
+                        <img src="images/media-23.svg" alt="logo-premio-odebrecht">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Seletora de Mudas de Cana-de-Açúcar vence Prêmio Odebrecht 2016</h5>
@@ -667,7 +663,7 @@
                   <a target="_blank" href="https://www.youtube.com/watch?v=g3t4nzPRBIY&feature=youtu.be">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-24.png" alt="logo-grupo-idea">
+                        <img src="images/media-24.svg" alt="logo-grupo-idea">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Fernando Lopes, da MVISIA, destaca inovações tecnológicas para o setor...</h5>
