--- a/template/page-media.html
+++ b/template/page-media.html
@@ -327,7 +327,7 @@
                   <a target="_blank" href="http://www.poli.usp.br/en/comunicacao/noticias/1819-alunos-da-poli-desenvolvem-tecnologia-inovadora-para-selecao-de-mudas-de-eucalipto.html">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-6.png" alt="logo-poli-usp">
+                        <img src="images/media-5.png" alt="logo-poli-usp">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Alunos da Poli desenvolvem tecnologia...</h5>
@@ -347,7 +347,7 @@
                   <a target="_blank" href="http://institutotim.org.br/2015/11/26/equipe-de-awc-conquista-premio/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-7.png" alt="logo-instituto-tim">
+                        <img src="images/media-6.png" alt="logo-instituto-tim">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Equipe de AWC conquista prêmio</h5>
@@ -367,7 +367,7 @@
                   <a target="_blank" href="http://sfagro.uol.com.br/pt_technologies/maquina-inovadora-consegue-selecionar-mudas-saudaveis-de-eucalipto/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-8.png" alt="logo-successful-farming">
+                        <img src="images/media-7.png" alt="logo-successful-farming">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Máquina inovadora consegue selecionar...</h5>
@@ -387,7 +387,7 @@
                   <a target="_blank" href="http://marcelopascon.com.br/podcast/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-9.png" alt="logo-radio-bandeirantes">
+                        <img src="images/media-8.png" alt="logo-radio-bandeirantes">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">MVisia na Rádio Bandeirantes</h5>
@@ -407,7 +407,7 @@
                   <a target="_blank" href="http://sfagro.uol.com.br/pt_technologies/maquina-inovadora-consegue-selecionar-mudas-saudaveis-de-eucalipto/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-10.png" alt="logo-tecmundo">
+                        <img src="images/media-9.png" alt="logo-tecmundo">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Feira de investimentos seleciona projetos de TCC para transformar em um negócio</h5>
@@ -427,7 +427,7 @@
                   <a target="_blank" href="http://startse.infomoney.com.br/portal/2016/01/12/16045/feira-de-investimentos-seleciona-projetos-de-tcc-para-transformar-em-um-negcio/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-11.png" alt="logo-infomoney">
+                        <img src="images/media-10.png" alt="logo-infomoney">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Feira de investimentos seleciona projetos de TCC para transformar em um negócio</h5>
@@ -446,7 +446,7 @@
                   <a target="_blank" href="http://www.portaldbo.com.br/Portal/Espaco-empresarial/MVisia/17801">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-12.png" alt="logo-portal-dbo">
+                        <img src="images/media-11.png" alt="logo-portal-dbo">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Tecnologia automatiza seleção de produtos agrícolas</h5>
@@ -486,7 +486,7 @@
                   <a target="_blank" href="http://cenarioagro.com.br/prototipo-de-seletora-de-mudas-de-cana-e-premiado/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-13.png" alt="logo-cenario-agro">
+                        <img src="images/media-12.png" alt="logo-cenario-agro">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Protótipo de seletora de mudas de cana é premiado</h5>
@@ -505,7 +505,7 @@
                   <a target="_blank" href="http://g1.globo.com/sp/sao-carlos-regiao/jornal-da-eptv-2edicao/videos/t/edicoes/v/embrapa-instrumentacao-desenvolve-maquina-que-tira-sujeira-de-frutas-e-legumes-sem-agua/5794091/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-14.png" alt="logo-g1">
+                        <img src="images/media-13.png" alt="logo-g1">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Embrapa Instrumentação desenvolve máquina que tira sujeira de frutas e legumes...</h5>
@@ -524,7 +524,7 @@
                 <div class="col-md-3 col-sm-12 col-xs-12">
                   <div class="image-box shadow-2 text-center mb-20">
                     <div class="overlay-container">
-                      <img src="images/media-15.png" alt="logo-grupo-cultivar">
+                      <img src="images/media-14.png" alt="logo-grupo-cultivar">
                       <div class="overlay-top">
                         <div class="text">
                           <h5 class="text-white title">Máquina compacta voltada a pequenos produtores limpa tomate sem uso de água</h5>
@@ -543,7 +543,7 @@
                   <a target="_blank" href="http://convergecom.com.br/tiinside/webinside/17/05/2017/empresas-criam-1a-associacao-brasileira-de-inteligencia-artificial/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-17.svg" alt="logo-ti-inside">
+                        <img src="images/media-15.png" alt="logo-ti-inside">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Empresas criam 1ª Associação Brasileira de Inteligência Artificial</h5>
@@ -563,7 +563,7 @@
                   <a target="_blank" href="https://awc.institutotim.org.br/noticias/mvisia-investe-em-novos-mercados-e-novas-aplicacoes/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-19.svg" alt="logo-instituto-tim">
+                        <img src="images/media-6.png" alt="logo-instituto-tim">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">MVisia investe em novos mercados e novas aplicações</h5>
@@ -583,7 +583,7 @@
                   <a target="_blank" href="http://www.poli.usp.br/pt/comunicacao/noticias/2362-politecnicos-criam-ferramenta-que-seleciona-mudas-ideais-de-cana-de-acucar.html?platform=hootsuite">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-20.svg" alt="logo-poli-usp">
+                        <img src="images/media-5.png" alt="logo-poli-usp">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Politécnicos criam ferramenta que seleciona mudas ideais de cana-de-açúcar</h5>
@@ -603,7 +603,7 @@
                   <a target="_blank" href="http://jornal.usp.br/ciencias/ciencias-agrarias/ferramenta-seleciona-mudas-ideais-de-cana-de-acucar/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-21.svg" alt="logo-jornal-da-usp">
+                        <img src="images/media-16.png" alt="logo-jornal-da-usp">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Ferramenta seleciona mudas ideais de cana-de-açúcar</h5>
@@ -623,7 +623,7 @@
                   <a target="_blank" href="https://awc.institutotim.org.br/noticias/nova-solucao-da-mvisia-para-cana-de-acucar-conquista-premios/">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-22.svg" alt="logo-instituto-tim">
+                        <img src="images/media-6.png" alt="logo-instituto-tim">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Nova solução da MVisia para cana-de-açúcar conquista prêmios</h5>
@@ -643,7 +643,7 @@
                   <a target="_blank" href="https://www.youtube.com/watch?v=oN6re9K57KQ&list=PL6EFtJLroeE-AHNu3cvhGFU__rTbtfYf3">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-23.svg" alt="logo-premio-odebrecht">
+                        <img src="images/media-17.png" alt="logo-premio-odebrecht">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Seletora de Mudas de Cana-de-Açúcar vence Prêmio Odebrecht 2016</h5>
@@ -663,7 +663,7 @@
                   <a target="_blank" href="https://www.youtube.com/watch?v=g3t4nzPRBIY&feature=youtu.be">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-24.svg" alt="logo-grupo-idea">
+                        <img src="images/media-18.png" alt="logo-grupo-idea">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Fernando Lopes, da MVISIA, destaca inovações tecnológicas para o setor...</h5>
