--- a/template/page-tech-inteligencia-artificial.html
+++ b/template/page-tech-inteligencia-artificial.html
@@ -40,10 +40,7 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Font Awesome CSS -->
-    <link href="fonts/font-awesome/css/font-awesome.css" rel="stylesheet">
-
-    <!-- Fontello CSS -->
-    <link href="fonts/fontello/css/fontello.css" rel="stylesheet">
+    <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Plugins -->
     <link href="plugins/rs-plugin-5/css/settings.css" rel="stylesheet">
@@ -51,7 +48,6 @@
     <link href="plugins/rs-plugin-5/css/navigation.css" rel="stylesheet">
     <link href="css/animations.css" rel="stylesheet">
     <link href="plugins/owlcarousel2/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="plugins/owlcarousel2/assets/owl.theme.default.min.css" rel="stylesheet">
     <link href="plugins/hover/hover-min.css" rel="stylesheet">
 
     <link href="css/style.css" rel="stylesheet" >
@@ -205,11 +201,11 @@
 
       <!-- banner start -->
       <!-- ================ -->
-      <div class="banner dark-translucent-bg" style="background-image:url('images/page-tech-1-banner.png'); background-position: 50% 27%;">
+      <div class="banner dark-translucent-bg" style="background-image:url('images/page-tech-3-banner.png'); background-position: 50% 27%;">
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
-              <h2 class="title">Câmeras Hiperespectrais</h2>
+              <h2 class="title">Inteligência artificial</h2>
               <div class="separator"></div>
             </div>
           </div>
