--- a/template/index.html
+++ b/template/index.html
@@ -170,7 +170,7 @@
                             <li><a href="page-case-calibradora.html">Calibradora eletrônica de tomates</a></li>
                             <li><a href="page-case-seletora-mudas-eucalipto.html">Seletora de mudas de eucalipto</a></li>
                             <li><a href="page-case-seletora-mudas-flores.html">Seletora de mudas de flores</a></li>
-                            <li><a href="page-case-seletora-mudas-flores.html">Sistema de qualificação de uvas</a></li>
+                            <li><a href="page-case-sistema-qualificacao-uvas.html">Sistema de qualificação de uvas</a></li>
                           </ul>
                         </li>
                         <!-- media -->
@@ -429,7 +429,7 @@
             </div>
             <div class="col-lg-6">
               <div class="rounded text-center special-container">
-                <a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><img class="rounded" src="images/about-bg-image2.png" alt="mvisia-youtube-channel"></a>
+                <a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><img class="rounded" src="images/about-bg-image.png" alt="mvisia-youtube-channel"></a>
               </div>
             </div>
           </div>
