--- a/template/page-case-calibradora.html
+++ b/template/page-case-calibradora.html
@@ -170,7 +170,7 @@
                             <li><a href="page-case-calibradora.html">Calibradora eletrônica de tomates</a></li>
                             <li><a href="page-case-seletora-mudas-eucalipto.html">Seletora de mudas de eucalipto</a></li>
                             <li><a href="page-case-seletora-mudas-flores.html">Seletora de mudas de flores</a></li>
-                            <li><a href="page-case-seletora-mudas-flores.html">Sistema de qualificação de uvas</a></li>
+                            <li><a href="page-case-sistema-qualificacao-uvas.html">Sistema de qualificação de uvas</a></li>
                           </ul>
                         </li>
                         <!-- media -->
@@ -232,20 +232,17 @@
                     <div class="overlay-container overlay-visible rounded">
                       <img src="images/page-case-1-1.png" alt="tomate-1">
                     </div>
-                    <div class="overlay-container overlay-visible">
+                    <div class="overlay-container overlay-visible rounded">
                       <img src="images/page-case-1-2.png" alt="tomate-2">
                     </div>
-                    <div class="overlay-container overlay-visible">
+                    <div class="overlay-container overlay-visible rounded">
                       <img src="images/page-case-1-3.png" alt="tomate-3">
                     </div>
-                    <div class="overlay-container overlay-visible">
+                    <div class="overlay-container overlay-visible rounded">
                       <img src="images/page-case-1-4.png" alt="tomate-4">
                     </div>
-                    <div class="overlay-container overlay-visible">
+                    <div class="overlay-container overlay-visible rounded">
                       <img src="images/page-case-1-5.png" alt="tomate-5">
-                    </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-1-6.png" alt="tomate-6">
                     </div>
                   </div>
                 </div>
