--- a/template/index.html
+++ b/template/index.html
@@ -763,7 +763,7 @@
                         <div class="col-md-4">
                           <div class="pv-30 phl-40 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                             <a target="_blank" href="http://www.fapesp.br/11441">
-                              <img class="media-logo" src="images/media-5.png">
+                              <img class="media-logo" src="images/media-3.png">
                             </a>
                           </div>
                         </div>
@@ -779,7 +779,7 @@
                         <div class="col-md-4">
                           <div class="pv-30 phl-40 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                             <a target="_blank" href="http://pesquisaparainovacao.fapesp.br/mvisia_adapta_produto_para_conquistar_diferentes_mercados/49">
-                              <img class="media-logo" src="images/media-5.png">
+                              <img class="media-logo" src="images/media-3.png">
                             </a>
                           </div>
                         </div>
@@ -795,7 +795,7 @@
                         <div class="col-md-4">
                           <div class="pv-30 phl-40 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                             <a target="_blank" href="https://www.santanderuniversidades.com.br/embaixadores/paginas/fernando-antonio-torres-velloso-da-silva-neto.aspx">
-                              <img class="media-logo" src="images/media-1.svg">
+                              <img class="media-logo" src="images/media-4.png">
                             </a>
                           </div>
                         </div>
@@ -919,6 +919,7 @@
   
       <!-- jquery and bootstap core js files -->
       <script type="text/javascript" src="plugins/jquery.min.js"></script>
+      <script type="text/javascript" src="plugins/popper.min.js"></script>
       <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
       <!-- Modernizr javascript -->
       <script type="text/javascript" src="plugins/modernizr.js"></script>
